--- a/My Styles.css
+++ b/My Styles.css
@@ -10,7 +10,7 @@ body{
 
 body header div, .about_me, body footer{
     background-color:white;
-    box-shadow: rgb(215, 255, 253) 0.5rem 0.5rem 2rem;
+    box-shadow: rgb(152, 209, 206) 0.5rem 0.5rem 1rem;
 }
 hr{
     width:80%;
@@ -39,6 +39,7 @@ h2{
     margin-right: 1rem;
     padding: 0.5rem;
     font-family:monospace;
+    flex-shrink: 1;
 }
 .profile{
     width:100%;
@@ -47,8 +48,11 @@ h2{
 }
 .information{
     margin: 0;
-    flex-wrap: 1;
     flex-grow: 1;
+}
+.list{
+    width: 80%;
+    margin: 0 auto;
 }
 .icon{
     display:inline-block;
@@ -68,10 +72,6 @@ h2{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1rem;
-}
-.skills{
-    width: 80%;
-    margin: 0 auto;
 }
 .education{
     width: 100%;
@@ -93,6 +93,7 @@ h2{
 }
 
 
+
 @media screen and (min-width:550px) and (max-width:800px){
     body{
         font-size: 12px;
@@ -100,7 +101,7 @@ h2{
     }
 }
 
-@media screen and (min-width:800px) and (orientation:landscape){
+@media screen and (min-width:800px){
     body{
         font-size: initial;
     }
@@ -108,6 +109,12 @@ h2{
         max-width: 50rem;
     }
 
+}
+
+@media print{
+    body{
+        font-size: 13px;
+    }
 }
 /*
 
