--- a/My Styles.css
+++ b/My Styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-image:radial-gradient(circle, white,rgb(187, 224, 212));
+    background-image:radial-gradient(circle, white,red);
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
