--- a/My Styles.css
+++ b/My Styles.css
@@ -1,7 +1,16 @@
+.me{    
+        display: none;
+        position:fixed;
+        top: -2em;
+        left: 0;
+        width:100%;
+        text-align: center;
+}
+
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image:radial-gradient(circle, white,rgb(187, 224, 212));
-    background-repeat: no-repeat;
+    background-repeat:no-repeat;
     display: flex;
     flex-direction: column;
     font-size: 8px;
@@ -46,7 +55,20 @@ h2{
     flex-shrink: 0;
     flex-grow: 0;
 }
-.profile{
+.qr{
+    display: none;
+}
+.profile-low-res{
+    width:100%;
+    margin: auto;
+}
+.profile-mid-res{
+    display: none;
+    width:100%;
+    margin: auto;
+}
+.profile-hig-res{
+    display: none;
     width:100%;
     margin: auto;
 }
@@ -56,7 +78,7 @@ h2{
     flex-grow: 1;
 }
 .list{
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
 }
 .icon{
@@ -76,7 +98,8 @@ h2{
     width: 90vw;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2em;
+    margin-bottom: 30vh;
+    padding-bottom: 1em;
 }
 .education{
     width: 100%;
@@ -87,7 +110,9 @@ h2{
 }
 .place_icon{
     width:75%;
+    max-width: 1cm;
     padding:12.5%;
+    padding-right:0;
     margin-left:auto;
     margin-right:auto;
 }
@@ -107,47 +132,13 @@ h2{
 
 
 
-@media screen and (min-width:550px) and (max-width:800px){
-    body{
-        font-size: 12px;
-        max-width: 50rem;
-    }
-}
 
-@media screen and (min-width:800px){
-    body{
-        font-size: initial;
-    }
-    .presentation, .about_me{
-        max-width: 50rem;
-    }
-
-}
-
-@media print{
-    body{
-        font-size: 13px;
-    }
-}
-
-header {
-    animation-duration: 3s;
-    animation-name: slidein;
-  }
-  
-main {
-    animation-duration: 3s;
-    animation-name: slidein2;
-  }
-  
-  @keyframes slidein {
+@keyframes slidein {
     from {
         margin-top:-100%;
     }
-  
     to {
-        margin-top:1rem;
-        
+        margin-top:1rem;   
     }
   }
   
@@ -155,11 +146,95 @@ main {
     from {
       margin-top: 200%;
     }
-  
     to {
       margin-top: 0;
     }
   }
+
+
+@media screen and (min-width:380px){
+    body{
+        font-size: 8px;
+    }
+}
+
+@media screen and (min-width:550px){
+    body{
+        font-size: 12px;
+    }
+    .profile-low-res{
+        display:none;
+    }
+    .profile-mid-res{
+        display:initial;
+    }
+}
+
+@media screen and (min-width:750px){
+    body{
+        font-size: 12px;
+    }
+
+    
+    .presentation, .about_me{
+        max-width: 50em;
+    }
+    
+    header {
+        animation-duration: 3s;
+        animation-name: slidein;
+    }
+    
+    main {
+        animation-duration: 3s;
+        animation-name: slidein2;
+    }
+}
+
+@media screen and (min-width:1081px){
+    body{
+        font-size: initial;
+    }
+
+}
+
+
+
+@media print{
+
+    .me{
+        display: block;
+    }
+    body{
+        font-size: 13px;   
+    }
+
+    body header div, .about_me, body footer{
+        background-color:white;
+        box-shadow:none;
+    }
+    .about_me{
+        margin-bottom: 0;
+    }
+    .intro{
+        display: none;
+    }
+    .qr{
+        display: block;
+        width: 25%;
+        max-width: 4cm;
+        margin: 0;
+        margin-right: 2em;
+        padding: 1em;
+        font-family:monospace;
+        flex-shrink: 0;
+        flex-grow: 0;
+    }
+
+
+}
+
+  
   
 /*
 
