--- a/My Styles.css
+++ b/My Styles.css
@@ -1,11 +1,69 @@
 .me{    
-        display: none;
-        position:fixed;
-        top: -2em;
-        left: 0;
-        width:100%;
-        text-align: center;
+    position: fixed;
+    top: -1em;
+    z-index: 100;
+    text-align: center;
+    left: 0;
+    width:50%;
+    left: 25%;
+    color: white;
+    text-shadow: turquoise 2px 2px;
+        
 }
+
+.mainBar{
+    background-color: rgb(187, 224, 212);
+    width: 100vw;
+    height: 3em;
+    position: fixed;
+    top:0;
+    left: 0;
+    box-shadow: rgb(152, 209, 206) 0.5rem 0.5rem 1rem;
+    text-align: center;
+    z-index: 100;
+}
+
+.button-menu{
+    position: relative;
+    z-index: 105;
+    left: 1em;
+    height: 3em;
+    width: 3em;
+}
+.littleBar1, .littleBar2, .littleBar3{
+    position: absolute;
+    width: 100%;
+    height: 10%;
+    background-color: white;
+}
+.littleBar1{
+    top:17.5%;
+}
+.littleBar2{
+    top:45%;
+}
+.littleBar3{
+    top:72.5%;
+}
+.menu{
+    /*display: none;*/
+    background-color: rgb(187, 224, 212);
+    width: 15em;
+    position:fixed;
+    top: 0;
+    padding-top: 5em;
+    left: 0;
+    height: 100vh;
+    z-index: 10;
+    display:none;
+    flex-direction: column;
+    flex-wrap: 0;
+}
+.menu-option{
+    height: 3em;
+    padding-left: 1em;
+}
+
 
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -15,6 +73,7 @@ body{
     flex-direction: column;
     font-size: 8px;
     height: 200%;
+    margin-top: 3em;
 }
 a{
     text-decoration: none;
@@ -185,9 +244,18 @@ h2{
 
 
 @media print{
+    
+    .mainBar{
+        display: none;
+    }
+    .menu{
+        display:none;
+    }
 
     .me{
         display: block;
+        top: -2em;
+        text-shadow: none;
     }
     body{
         font-size: 13px;   
