deleting trash files and making work diferent sections

--- a/My Styles.css
+++ b/My Styles.css
@@ -146,6 +146,7 @@ h2{
 
 
 .about_me{
+    padding-top: 3em;
     display: flex;
     flex-direction: column;
     width: 90vw;
@@ -241,7 +242,31 @@ h2{
     }
 }
 
-
+@media screen and (orientation:portrait){
+    .menu{
+        position: absolute;
+        width: 100vw;
+        height: 90vh;
+        font-size: initial;
+        align-items: center;
+        justify-content:flex-start;
+        padding-top:10vh;
+    }
+    .menu-option{
+        width: 80%;
+        
+        margin-bottom: auto;
+        margin-right: auto;
+        margin-left:auto;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: auto;
+        background-color: white;
+        box-shadow: turquoise 2px 2px 10px;
+    }
+}
 
 @media print{
     
@@ -267,6 +292,8 @@ h2{
     }
     .about_me{
         margin-bottom: 0;
+        padding-top: 0;
+        margin-top:0;
     }
     .intro{
         display: none;
