--- a/My Styles.css
+++ b/My Styles.css
@@ -19,7 +19,8 @@
     font:inherit;
     font-size: 1.5rem;
     color: white;
-    text-shadow: turquoise 2px 2px 5px;
+    font-weight: bolder;
+    text-shadow: rgb(2, 124, 112) 2px 2px 4px;
 }
 
 .mainBar{
@@ -79,7 +80,8 @@
     height: 3em;
     padding-left: 1em;
     color:white;
-    text-shadow: turquoise 2px 2px 10px;
+    font-weight: bolder;
+    text-shadow: rgb(2, 124, 112) 2px 2px 4px;
 
 }
 
