--- a/My Styles.css
+++ b/My Styles.css
@@ -85,6 +85,46 @@
 }
 
 
+.videoContainer{
+    position: fixed;
+    z-index: 2000;
+    display: block;
+    top: 4rem;
+    left: 10vw;
+    width: 80vw;
+    height: 40vw;
+    
+    /*background-color: red;*/
+}
+.xButton {
+    height: 3rem;
+    width: 3rem;
+    background-color: #FA6900;
+    border-radius: 5px;
+    position: absolute;
+    top: -1.5rem;
+    right: -1.5rem;
+}
+
+.xButton:after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: "\274c"; /* use the hex value here... */
+    font-size: 2rem; 
+    color: #FFF;
+    line-height: 3rem;
+    text-align: center;
+}
+
+
+.video{
+    width:100%;
+    height: 100%;
+}
+
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image:radial-gradient(circle, white,rgb(187, 224, 212));
