--- a/My Styles.css
+++ b/My Styles.css
@@ -207,7 +207,7 @@ h2{
 }
 .list, .list1{
     width: 90%;
-    margin: 0 auto;
+    margin: auto;
 }
 .list1{
     list-style-type: none;
@@ -270,6 +270,8 @@ article{
     width: 25%;
     max-width:4cm;
     padding-right: 0.5em;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 .info{
     margin: 0 0 0 5em;
@@ -453,6 +455,9 @@ article{
         border-radius: 1rem;
         color: black;
         text-shadow: none;
+    }
+    .list1{
+        padding: 0 2em 0 2em;
     }
 }
 
